// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Footer renders a footer aligned to the center 1`] = `
.c0 {
  padding-top: calc(0.5 * var(--lendi-ui-size));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<Footer
  align="center"
>
  <styled.div
    align="center"
  >
    <StyledComponent
      align="center"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-iwsKbI",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
    padding-top: ",
              "calc(0.5 * var(--lendi-ui-size))",
              ";
  ",
              "
  display: flex;
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-iwsKbI",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        Some footer
      </div>
    </StyledComponent>
  </styled.div>
</Footer>
`;

exports[`Card Footer renders a footer aligned to the left 1`] = `
.c0 {
  padding-top: calc(0.5 * var(--lendi-ui-size));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<Footer
  align="left"
>
  <styled.div
    align="left"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-iwsKbI",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
    padding-top: ",
              "calc(0.5 * var(--lendi-ui-size))",
              ";
  ",
              "
  display: flex;
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-iwsKbI",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        Some footer
      </div>
    </StyledComponent>
  </styled.div>
</Footer>
`;

exports[`Card Footer renders a footer aligned to the right 1`] = `
.c0 {
  padding-top: calc(0.5 * var(--lendi-ui-size));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<Footer
  align="right"
>
  <styled.div
    align="right"
  >
    <StyledComponent
      align="right"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-iwsKbI",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              "
    padding-top: ",
              "calc(0.5 * var(--lendi-ui-size))",
              ";
  ",
              "
  display: flex;
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-iwsKbI",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        Some footer
      </div>
    </StyledComponent>
  </styled.div>
</Footer>
`;
